--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,16 +1,27 @@
-.container {
-  padding: 0 2rem;
-}
-
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
+
+.anchor {
+  text-decoration: none;
+  color: #333;
+}
+
+.paper:hover .anchor {
+  color: #fff;
+}
+
+.paper:hover {
+  cursor: pointer;
+  background-color: #333;
+}
+
 
 .footer {
   display: flex;
