assessment([nextjs-styling]mini-ecommerce style): adding style in product detail

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,12 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  background-color: #F9F871;
+  font-family: 'Inter', sans-serif !important;
+}
+
+.marginBottom1 {
+  margin-bottom: 1rem;
 }
 
 .anchor {
